# type-inference

./: .gitignore  Makefile
bug/: closed
bug/open/: SubstitutionBug.hs
src/: gundry-unification.cabal
src/Common/: Names.lhs  PrettyPrint.lhs
src/PatternUnify/: Check.lhs  Context.lhs  Test.lhs  Tm.lhs  Unify.lhs
