Name:                gundry-unification
Version:             0
Synopsis:            Unification and type inference algorithms
Description:         
    This package contains literate Haskell implementations of three
    unification algorithms (for the free theory, abelian groups and
    higher-order pattern unification) and two type inference algorithms
    (for the Hindley-Milner type system and Kennedy-style units of
    measure).  It accompanies the Ph.D. thesis "Type Inference, Haskell
    and Dependent Types" by Adam Gundry.

-- Homepage:            https://github.com/adamgundry/type-inference/
License:             BSD3
License-file:        ../LICENSE
Author:              Adam Gundry <adam.gundry@strath.ac.uk>
Maintainer:          Adam Gundry <adam.gundry@strath.ac.uk>
Copyright:           Copyright (c) 2013 Adam Gundry
Category:            Language
Build-type:          Simple

Cabal-version:       >=1.8

Library
  -- SHE is dumb and won't work if we try to compile outside of the
  -- source dir.  So, the .cabal file is in here :P
  hs-source-dirs:    .
  Build-depends:     base == 4.*,
                          RepLib == 0.5.*,
                          unbound == 0.4.*,
                          unbound-substm,
--                          signed-multiset == 0.3.*,
                          containers >= 0.3 && < 0.6,
                          mtl == 2.*,
                          pretty == 1.1.*,
                          she == 0.6.*
                         
  Exposed-modules:      Common.BwdFwd
                        Common.Names
                        Common.PrettyPrint
--                        Milner.Infer
--                        Milner.Test
--                        Milner.Type
--                        Milner.Unify
--                        Milner.Zipper
                        PatternUnify.Check
                        PatternUnify.Context
                        PatternUnify.Test
                        PatternUnify.Tm
                        PatternUnify.Unify
--                        Units.Group
--                        Units.GroupUnify
--                        Units.Infer
--                        Units.Test
--                        Units.Type
--                        Units.Unify
--
-- source-repository head
--   type:     git
--   location: git://github.com/adamgundry/type-inference.git
